--- a/src/common/translation/i18n/sv.json
+++ b/src/common/translation/i18n/sv.json
@@ -114,7 +114,7 @@
         "text": "Helsingfors stad står fadder till barn som föds 2020. Ta kontakt om du vill få mer information om fadderprogrammet för barn födda 2020."
       },
       "heading": {
-        "text": "Tjänsten Kulturens fadderbarn"
+        "text": "Kontakta oss"
       },
       "service": {
         "name": "Tjänsten Kulturens fadderbarn",
@@ -176,7 +176,11 @@
     "hero": {
       "buttonText": "Anmäl dig",
       "descriptionText": "Alla Helsingforsbarn födda 2020 eller senare bjuds in som Kulturens fadderbarn. Fadderbarnen bjuds årligen in till två event tills barnet börjar i skolan. Evenemangen är avgiftsfria.",
-      "heading": "Kulturens fadderbarn"
+      "heading": "Kulturens fadderbarn",
+      "underConstruction": {
+        "text": "Välkommen som kulturens fadderbarn! ",
+        "heading": "Registeringen börjar 31 januari 2020"
+      }
     },
     "preliminaryForm": {
       "childBirthdate": {
@@ -387,5 +391,6 @@
     "postalCode": {
       "invalidFormat": "Fel format"
     }
-  }
+  },
+  "Tyvärr är registreringen ännu inte öppen. Du kan anmäl ditt barn från den 31 januari 2020.": ""
 }
