--- a/src/common/translation/i18n/sv.json
+++ b/src/common/translation/i18n/sv.json
@@ -109,10 +109,6 @@
   },
   "home": {
     "contact": {
-      "godchild": {
-        "name": "Fadderverksamhet för barn födda 2020",
-        "text": "Helsingfors stad står fadder till barn som föds 2020. Ta kontakt om du vill få mer information om fadderprogrammet för barn födda 2020."
-      },
       "heading": {
         "text": "Kontakta oss"
       },
@@ -178,7 +174,7 @@
       "descriptionText": "Alla Helsingforsbarn födda 2020 eller senare bjuds in som Kulturens fadderbarn. Fadderbarnen bjuds årligen in till två event tills barnet börjar i skolan. Evenemangen är avgiftsfria.",
       "heading": "Kulturens fadderbarn",
       "underConstruction": {
-        "text": "Välkommen som kulturens fadderbarn! ",
+        "text": "Välkommen som kulturens fadderbarn! Tyvärr är registreringen ännu inte öppen. Du kan anmäl ditt barn från den 31 januari 2020.",
         "heading": "Registeringen börjar 31 januari 2020"
       }
     },
@@ -230,7 +226,10 @@
     }
   },
   "notFound": {
-    "text": "Sidan du letade efter kunde inte hittas"
+    "text": "Sidan du letade efter kunde inte hittas",
+    "return": {
+      "text": "Tillbaka till framsidan"
+    }
   },
   "partners": {
     "2020": "Födda 2020"
@@ -391,6 +390,5 @@
     "postalCode": {
       "invalidFormat": "Fel format"
     }
-  },
-  "Tyvärr är registreringen ännu inte öppen. Du kan anmäl ditt barn från den 31 januari 2020.": ""
+  }
 }
