--- a/src/common/translation/i18n/sv.json
+++ b/src/common/translation/i18n/sv.json
@@ -174,7 +174,7 @@
       "descriptionText": "Alla Helsingforsbarn födda 2020 eller senare bjuds in som Kulturens fadderbarn. Fadderbarnen bjuds årligen in till två event tills barnet börjar i skolan. Evenemangen är avgiftsfria.",
       "heading": "Kulturens fadderbarn",
       "underConstruction": {
-        "text": "Välkommen som kulturens fadderbarn! Tyvärr är registreringen ännu inte öppen. Du kan anmäl ditt barn från den 31 januari 2020.",
+        "text": "Välkommen till Kulturens fadderbarn-tjänsten! Tyvärr är registreringen ännu inte öppen. Du kan anmäl ditt barn från den 31 januari 2020.",
         "heading": "Registeringen börjar 31 januari 2020"
       }
     },
