--- a/src/common/translation/i18n/en.json
+++ b/src/common/translation/i18n/en.json
@@ -105,7 +105,8 @@
     "title": "Welcome to the Culture Kids programme!"
   },
   "footer": {
-    "copyrightText": "© Copyright 2019 • All rights reserved •"
+    "copyrightText": "© Copyright 2019 • All rights reserved •",
+    "accessibilityStatement": "Accessibility statement"
   },
   "home": {
     "contact": {
